Fixes for logstash and curator

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -3,14 +3,14 @@ input {
     interval => 3600
     bucket_id => "charitydiscount-products"
     file_matches => ".*.csv"
-    json_key_file => "/usr/share/logstash/key.json"
+    #json_key_file => "/usr/share/logstash/key.json" #Attach service account to VM instead
   }
 }
 
 filter {
   csv {
     separator => ","
-    columns => ["title","aff_code","price","product_id","old_price","category","campaign_id","campaign_name","brand"]
+    columns => ["title","aff_code","price","product_id","old_price","category","campaign_id","campaign_name","brand","url","image_urls"]
     skip_header => "true"
     convert => {
       "price" => "float"
@@ -23,7 +23,9 @@ filter {
 
 output {
   elasticsearch {
-    hosts => "127.0.0.1:9200"
+    hosts => "elasticsearch:9200"
+    user => elastic
+    password => changeme
     index => "products-%{+YYYY.MM.dd}"
     document_id => "%{aff_code}"
   }
