Switched to file logstash input

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,10 +1,12 @@
 input {
-  google_cloud_storage {
-    interval => 3600
-    bucket_id => "charitydiscount-products"
-    file_matches => ".*.csv"
-    #json_key_file => "/usr/share/logstash/key.json" #Attach service account to VM instead
-  }
+  file {
+    path => "/tmp/products/*.csv"
+    start_position => beginning
+		sincedb_path => "/dev/null"
+    file_completed_action => "delete"
+    mode => "read"
+    stat_interval => "30 m"
+	}
 }
 
 filter {
