Added ids to pipeline

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,16 +1,18 @@
 input {
   file {
+    id => "products-csv-input"
     path => "/tmp/products/*.csv"
     start_position => beginning
-		sincedb_path => "/dev/null"
+    sincedb_path => "/dev/null"
     file_completed_action => "delete"
     mode => "read"
     stat_interval => "30 m"
-	}
+  }
 }
 
 filter {
   csv {
+    id => "products-csv-filter"
     separator => ","
     columns => ["title","aff_code","price","product_id","old_price","category","campaign_id","campaign_name","brand","url","image_urls"]
     skip_header => "true"
@@ -25,6 +27,7 @@ filter {
 
 output {
   elasticsearch {
+    id => "products-output"
     hosts => "elasticsearch:9200"
     user => elastic
     password => changeme
