Clone events for product prices

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -14,7 +14,9 @@ filter {
   csv {
     id => "products-csv-filter"
     separator => ","
-    columns => ["title","aff_code","price","product_id","old_price","category","campaign_id","campaign_name","brand","url","image_urls"]
+    columns => ["title","aff_code","price","product_id",
+      "old_price","category","campaign_id","campaign_name",
+      "brand","url","image_urls"]
     skip_header => "true"
     convert => {
       "price" => "float"
@@ -23,15 +25,42 @@ filter {
     }
     remove_field => ["message","host","path","@version"]
   }
+
+  clone {
+    clones => ["price_clone"]
+  }
+
+  if [type] == "price_clone" {
+    prune {
+      whitelist_names => ["aff_code", "price", "@timestamp"]
+    }
+    mutate {
+      add_field => {
+        "[@metadata][type]" => "price_clone"
+      }
+    }
+  }
 }
 
 output {
-  elasticsearch {
-    id => "products-output"
-    hosts => "elasticsearch:9200"
-    user => elastic
-    password => changeme
-    index => "products-%{+YYYY.MM.dd}"
-    document_id => "%{aff_code}"
+  if [@metadata][type] == "price_clone" {
+    elasticsearch {
+      id => "prices-output"
+      hosts => "elasticsearch:9200"
+      user => elastic
+      password => changeme
+      index => "prices-%{+YYYY.MM.dd}"
+      document_id => "%{aff_code}"
+    }
+  }
+  else {
+    elasticsearch {
+      id => "products-output"
+      hosts => "elasticsearch:9200"
+      user => elastic
+      password => changeme
+      index => "products-%{+YYYY.MM.dd}"
+      document_id => "%{aff_code}"
+    }
   }
 }
