Support for altex products and other improvements

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,29 +1,134 @@
 input {
   file {
     id => "products-csv-input"
-    path => "/tmp/products/*.csv"
+    path => "/var/products/feed-*.csv"
     start_position => beginning
     sincedb_path => "/dev/null"
     file_completed_action => "delete"
     mode => "read"
-    stat_interval => "30 m"
+    stat_interval => "15m"
+    discover_interval => 2
+    file_chunk_size => 524288
+    type => "2p"
+  }
+
+  file {
+    id => "altex-csv-input"
+    path => "/var/products/altex-*.csv"
+    start_position => beginning
+    sincedb_path => "/dev/null"
+    file_completed_action => "delete"
+    mode => "read"
+    stat_interval => "15m"
+    discover_interval => 2
+    file_chunk_size => 524288
+    type => "altex"
   }
 }
 
 filter {
-  csv {
-    id => "products-csv-filter"
-    separator => ","
-    columns => ["title","aff_code","price","product_id",
-      "old_price","category","campaign_id","campaign_name",
-      "brand","url","image_urls"]
-    skip_header => "true"
-    convert => {
-      "price" => "float"
-      "old_price" => "float"
-      "campaign_id" => "integer"
+  if [type] == "2p" {
+    csv {
+      id => "products-csv-filter"
+      separator => ","
+      columns => [
+        "title",
+        "aff_code",
+        "price",
+        "product_id",
+        "old_price",
+        "category",
+        "campaign_id",
+        "campaign_name",
+        "brand",
+        "url",
+        "image_urls"
+      ]
+      skip_header => true
+      convert => {
+        "price" => "float"
+        "old_price" => "float"
+        "campaign_id" => "integer"
+      }
+      remove_field => ["message", "host", "path", "@version"]
+      skip_empty_rows => true
     }
-    remove_field => ["message","host","path","@version"]
+
+    mutate {
+      copy => {
+        "aff_code" => "affiliate_url"
+      }
+    }
+
+    mutate {
+      replace => {
+        "affiliate_url" => "%{aff_code}&st={userId}"
+      }
+    }
+  }
+
+  if [type] == "altex" {
+    csv {
+      id => "altex-csv-filter"
+      separator => ","
+      columns => [
+        "Nume produs",
+        "Pret final",
+        "Categorie",
+        "Subcategorie",
+        "URL",
+        "URL img",
+        "Brand",
+        "In stoc",
+        "Pret original",
+        "Promotie"
+      ]
+      skip_header => true
+      skip_empty_columns => true
+      skip_empty_rows => true
+      convert => {
+        "Pret final" => "float"
+        "Pret original" => "float"
+      }
+      remove_field => [
+        "message",
+        "host",
+        "path",
+        "@version",
+      ]
+      add_field => {
+        "campaign_name" => "Altex"
+      }
+    }
+
+    mutate {
+      rename => {
+        "Nume produs" => "title"
+        "Pret final" => "price"
+        "Categorie" => "category"
+        "Subcategorie" => "subcategory"
+        "URL" => "url"
+        "URL img" => "image_urls"
+        "Brand" => "brand"
+        "In stoc" => "in_stock"
+        "Pret original" => "old_price"
+        "Promotie" => "promotion"
+      }
+      copy => {
+        "url" => "aff_code"
+        "aff_code" => "affiliate_url"
+      }
+    }
+
+    mutate {
+      replace => {
+        "affiliate_url" => "%{affiliate_url}&affsid={userId}"
+      }
+    }
+  }
+
+  mutate {
+    rename => { "type" => "source" }
   }
 
   clone {
