--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,9 @@ services:
         source: ./logstash/pipeline
         target: /usr/share/logstash/pipeline
         read_only: true
+      - type: bind
+        source: $PRODUCTS_LOCATION
+        target: /var/products
     ports:
       - "5000:5000"
       - "9600:9600"
