--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -48,7 +48,6 @@ filter {
       convert => {
         "price" => "float"
         "old_price" => "float"
-        "campaign_id" => "integer"
       }
       remove_field => ["message", "host", "path", "@version"]
       skip_empty_rows => true
@@ -97,6 +96,7 @@ filter {
         "@version",
       ]
       add_field => {
+        "campaign_id" => "1584781053771"
         "campaign_name" => "Altex"
       }
     }
