--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -6,6 +6,10 @@ upstream kibana {
   server kibana:5601;
 }
 
+upstream gateway {
+  server gateway:3000;
+}
+
 server {
   listen 80;
   listen 443 ssl;
@@ -19,5 +23,9 @@ server {
 
   location /kibana {
     proxy_pass http://kibana;
+  }
+
+  location /gateway/ {
+    proxy_pass http://gateway/;
   }
 }
