--- a/gateway/package.json
+++ b/gateway/package.json
@@ -21,21 +21,22 @@
   "homepage": "https://github.com/charitydiscount/elk#readme",
   "dependencies": {
     "@elastic/elasticsearch": "^7.10.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
-    "firebase-admin": "^9.4.1",
+    "firebase-admin": "^9.4.2",
     "helmet": "^4.2.0",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.8",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.7",
+    "@types/node": "^14.14.14",
     "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
