--- a/gateway/package.json
+++ b/gateway/package.json
@@ -28,12 +28,14 @@
     "express-bearer-token": "^2.4.0",
     "firebase-admin": "^9.4.2",
     "helmet": "^4.3.1",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/lodash": "^4.14.167",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.20",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
